fixed styling to an extant, spacing is still strange

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,6 +131,7 @@ form {
 
 .blogpost_title{
     border-bottom: 3px solid var(--color4);
+    height: 50px;
 }
 
 /* COMMENT PARTIAL STYLING */
@@ -138,7 +139,9 @@ form {
     margin: 15px 5px;
     padding-left: 25px;
     padding-right: 10px;
+    padding-top: 15px;
     color: var(--color4);
+    height: fit-content;
 }
 
 .comment_header{
@@ -169,3 +172,8 @@ form {
     display: block;
 }
 
+
+h2, h3{
+    margin: 0px;
+    padding: 0px;
+}
